--- a/icons.css
+++ b/icons.css
@@ -38,15 +38,34 @@
 .ico_lightening::before {
   content: '';
   display: block;
-  width: 10%;
-  height: 100%;
-border-bottom
+  position: absolute;
+  left: 50%;
+  top: 0;
+  z-index: 1;
+  margin-left: -7.5px;
+  height: 0;
+  width: 0;
+  border-right: 7.5px solid transparent;
+  border-left: 7.5px solid transparent;
+  border-bottom: 30px solid #333;
+  transform: rotate(25deg);
 }
-.container {
-  width: 500px;
-  height: 500px;
+.ico_lightening {
+  position: relative;
 }
-.ico {
-  width: 50px;
-  height: 50px;
+.ico_lightening::after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  margin-left: -10px;
+  margin-top: -5px;
+  height: 0;
+  width: 0;
+  border-right: 7.5px solid transparent;
+  border-left: 7.5px solid transparent;
+  border-bottom: 30px solid #333;
+  transform: rotate(-145deg);
 }
