--- a/icons.css
+++ b/icons.css
@@ -40,9 +40,10 @@
   display: block;
   position: absolute;
   left: 50%;
-  top: 0;
+  top: 50%;
   z-index: 1;
   margin-left: -7.5px;
+  margin-top: -25px;
   height: 0;
   width: 0;
   border-right: 7.5px solid transparent;
