--- a/icons.css
+++ b/icons.css
@@ -4,11 +4,12 @@
 .ico_eye::before {
   content: '';
   display: block;
-  width: 60%;
-  height: 60%;
+  width: 3em;
+  height: 3em;
+  transform-origin: 0 0;
   position: absolute;
-  left: 20%;
-  top: 20%;
+  left: 0.4em;
+  top: 2.5em;
   z-index: 1;
   background: #333;
   border-top-right-radius: 80%;
@@ -21,16 +22,15 @@
 .ico_eye::after {
   content: '';
   display: block;
-  width: 20%;
-  height: 20%;
+  width: 1em;
+  height: 1em;
+  transform-origin: 0 0;
   position: absolute;
-  left: 35%;
-  top: 35%;
+  left: 1.55em;
+  top: 1.55em;
   z-index: 1;
-  border: 4px solid #fff;
+  border: 0.45em solid #fff;
   border-radius: 100%;
-  margin-left: -2px;
-  margin-top: -2px;
 }
 .ico_lightening {
   position: relative;
@@ -38,6 +38,7 @@
 .ico_lightening::before {
   content: '';
   display: block;
+  transform-origin: 0 0;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -57,6 +58,7 @@
 .ico_lightening::after {
   content: '';
   display: block;
+  transform-origin: 0 0;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -69,4 +71,38 @@
   border-left: 7.5px solid transparent;
   border-bottom: 30px solid #333;
   transform: rotate(-145deg);
+}
+.ico_pencil {
+  position: relative;
+}
+.ico_pencil::after {
+  content: '';
+  display: block;
+  width: 15%;
+  height: 80%;
+  transform-origin: 0 0;
+  position: absolute;
+  left: 50%;
+  z-index: 1;
+  margin-left: -5px;
+  background: linear-gradient(to bottom, #333 0%, #333 15%, #fff 15%, #fff 25%, #333 25%, #333 100%);
+  transform: rotate(45deg);
+}
+.ico_pencil {
+  position: relative;
+}
+.ico_pencil::before {
+  content: '';
+  display: block;
+  transform-origin: 0 0;
+  position: absolute;
+  left: 50%;
+  bottom: 10px;
+  z-index: 1;
+  height: 0;
+  width: 0;
+  border-right: 7.5px solid transparent;
+  border-left: 7.5px solid transparent;
+  border-top: 15px solid #333;
+  transform: rotate(45deg);
 }
