--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+body {
+  font-size: 62.5%;
+}
+
 .container {
-  width: 500px;
-  height: 500px;
+  width: 50em;
+  height: 50em;
 }
 
 .ico {
-  width: 50px;
-  height: 50px;
+  width: 5em;
+  height: 5em;
 }
