--- a/icons.css
+++ b/icons.css
@@ -106,3 +106,34 @@
   border-top: 0.75em solid #333;
   transform: rotate(45deg);
 }
+.ico_hamburger {
+  position: relative;
+}
+.ico_hamburger::before {
+  content: '';
+  display: block;
+  width: 5em;
+  height: 3em;
+  transform-origin: 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  border-top: 1em #333 solid;
+  border-bottom: 1em #333 solid;
+}
+.ico_hamburger {
+  position: relative;
+}
+.ico_hamburger::after {
+  content: '';
+  display: block;
+  width: 5em;
+  height: 1em;
+  transform-origin: 0 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  border-bottom: 1em #333 solid;
+}
