--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   font-size: 62.5%;
   /*font-size: 100px*/
