--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -5,6 +5,7 @@
 @import 'icons/lightening.styl'
 @import 'icons/pencil.styl'
 @import 'icons/hamburger.styl'
+@import 'icons/expand.styl'
 
 .ico
   size: $size
