--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -6,6 +6,7 @@
 @import 'icons/pencil.styl'
 @import 'icons/hamburger.styl'
 @import 'icons/expand.styl'
+@import 'icons/cloud.styl'
 
 .ico
   size: $size
