--- a/stylus/icons/cloud.styl
+++ b/stylus/icons/cloud.styl
@@ -1,2 +1,14 @@
 .ico_cloud
   background: radial-gradient(circle at 0.6875*$size 0.415625*$size, $color 0%, $color 17%, transparent 18%,transparent 100%), radial-gradient(circle at 0.415625*$size 0.415625*$size, $color 0%, $color 30%, transparent 31%,transparent 100%), radial-gradient(circle at 0.2*$size 0.625*$size, $color 0%, $color 17%, transparent 18%, transparent 100%), radial-gradient(circle at 0.8*$size 0.625*$size, $color 0%, $color 17%, transparent 18%,transparent 100%), linear-gradient(90deg, $bgcolor 25%, transparent 25%, transparent 75%, $bgcolor 75%),linear-gradient(transparent 43.75%, $color 43.75%, $color 81.25%, transparent 81.25%)
+
+.ico_cloud2
+  background: radial-gradient(circle at 0.6875*$size 0.415625*$size, $color 0%, $color 17%, transparent 18%,transparent 100%), radial-gradient(circle at 0.415625*$size 0.415625*$size, $color 0%, $color 30%, transparent 31%,transparent 100%), radial-gradient(circle at 0.2*$size 0.625*$size, $color 0%, $color 17%, transparent 18%, transparent 100%), radial-gradient(circle at 0.8*$size 0.625*$size, $color 0%, $color 17%, transparent 18%,transparent 100%), linear-gradient(90deg, $bgcolor 25%, transparent 25%, transparent 75%, $bgcolor 75%),linear-gradient(transparent 43.75%, $color 43.75%, $color 81.25%, transparent 81.25%)
+  +p-el(before, 0.125*$size)
+    absolute: left 50% top 55%
+    margin-left: -0.0625*$size
+    background: $bgcolor
+  +p-el(after)
+    triangle(0.3*$size, $bgcolor, up)
+    absolute: left 50% top 55%
+    margin-top: -0.125*$size
+    margin-left: -0.15*$size
