--- a/stylus/icons/hamburger.styl
+++ b/stylus/icons/hamburger.styl
@@ -1,8 +1,8 @@
 .ico_hamburger
-    +p-el(before, $size, 0.6 * $size)
-        absolute: top 0 left 0
-        border-top: 0.2 * $size $color solid
-        border-bottom: 0.2 * $size $color solid
-    +p-el(after, $size, 0.2 * $size)
-        absolute: bottom 0 left 0
-        border-bottom: 0.2 * $size $color solid
+  +p-el(before, $size, 0.48 * $size)
+    absolute: top 0.1*$size left 0
+    border-top: 0.16 * $size $color solid
+    border-bottom: 0.16 * $size $color solid
+  +p-el(after, $size, 0.16 * $size)
+    absolute: bottom 0.1*$size left 0
+    border-bottom: 0.16 * $size $color solid
