--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -7,6 +7,7 @@
 @import 'icons/hamburger.styl'
 @import 'icons/expand.styl'
 @import 'icons/cloud.styl'
+@import 'icons/microphone.styl'
 
 .ico
   size: $size
