--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -8,6 +8,7 @@
 @import 'icons/expand.styl'
 @import 'icons/cloud.styl'
 @import 'icons/microphone.styl'
+@import 'icons/home.styl'
 
 .ico
   size: $size
