--- a/icons.css
+++ b/icons.css
@@ -261,6 +261,43 @@
   border-bottom-left-radius: 1.25em;
   border-bottom-right-radius: 1.25em;
 }
+.ico_home {
+  background: linear-gradient(to top, #fff 1em, transparent 1em, transparent 2.5em, #fff 2.5em), linear-gradient(to right, transparent 2.25em, #fff 2.25em, #fff 2.75em, transparent 2.75em), linear-gradient(to right, transparent 1.25em, #333 1.25em, #333 3.75em, transparent 3.75em);
+}
+.ico_home {
+  position: relative;
+}
+.ico_home::after {
+  content: '';
+  display: block;
+  height: ;
+  transform-origin: 0 0;
+  position: absolute;
+  top: 1em;
+  left: 0.5em;
+  z-index: 1;
+  height: 0;
+  width: 0;
+  border-right: 2em solid transparent;
+  border-left: 2em solid transparent;
+  border-bottom: 1.5em solid #333;
+}
+.ico_home {
+  position: relative;
+}
+.ico_home::before {
+  content: '';
+  display: block;
+  height: ;
+  transform-origin: 0 0;
+  position: absolute;
+  top: 1.25em;
+  right: 1.25em;
+  z-index: 1;
+  width: 0.5em;
+  height: 1.25em;
+  background: #333;
+}
 .ico {
   width: 5em;
   height: 5em;
