--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -9,6 +9,7 @@
 @import 'icons/cloud.styl'
 @import 'icons/microphone.styl'
 @import 'icons/home.styl'
+@import 'icons/play.styl'
 
 .ico
   size: $size
