--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -10,6 +10,7 @@
 @import 'icons/microphone.styl'
 @import 'icons/home.styl'
 @import 'icons/play.styl'
+@import 'icons/pause.styl'
 
 .ico
   size: $size
