--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -11,6 +11,7 @@
 @import 'icons/home.styl'
 @import 'icons/play.styl'
 @import 'icons/pause.styl'
+@import 'icons/stop.styl'
 
 .ico
   size: $size
