--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -12,6 +12,7 @@
 @import 'icons/play.styl'
 @import 'icons/pause.styl'
 @import 'icons/stop.styl'
+@import 'icons/skip.styl'
 
 .ico
   size: $size
