--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -13,6 +13,8 @@
 @import 'icons/pause.styl'
 @import 'icons/stop.styl'
 @import 'icons/skip.styl'
+@import 'icons/fastforward.styl'
+
 
 .ico
   size: $size
