--- a/icons.css
+++ b/icons.css
@@ -400,6 +400,42 @@
   border-bottom: 1.75em solid transparent;
   border-left: 1.75em solid #333;
 }
+.ico_fastforward {
+  position: relative;
+}
+.ico_fastforward::before {
+  content: '';
+  display: block;
+  height: ;
+  transform-origin: 0 0;
+  position: absolute;
+  left: 1em;
+  top: 0.75em;
+  z-index: 1;
+  height: 0;
+  width: 0;
+  border-top: 1.75em solid transparent;
+  border-bottom: 1.75em solid transparent;
+  border-left: 1.75em solid #333;
+}
+.ico_fastforward {
+  position: relative;
+}
+.ico_fastforward::after {
+  content: '';
+  display: block;
+  height: ;
+  transform-origin: 0 0;
+  position: absolute;
+  left: 2.5em;
+  top: 0.75em;
+  z-index: 1;
+  height: 0;
+  width: 0;
+  border-top: 1.75em solid transparent;
+  border-bottom: 1.75em solid transparent;
+  border-left: 1.75em solid #333;
+}
 .ico {
   width: 5em;
   height: 5em;
