--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -14,7 +14,7 @@
 @import 'icons/stop.styl'
 @import 'icons/skip.styl'
 @import 'icons/fastforward.styl'
-
+@import 'icons/check.styl'
 
 .ico
   size: $size
