--- a/stylus/icons/check.styl
+++ b/stylus/icons/check.styl
@@ -7,3 +7,11 @@
     absolute: top 0 left 0
     background: $color
     transform: translateX(0.29*$size) translateY(0.5*$size) rotate(45deg)
+
+.ico_check2
+  border-radius: 100%
+  border: 0.1*$size $color solid
+  +p-el(after)
+    absolute: top -0.1*$size left -0.1*$size
+  +p-el(before)
+    absolute: top -0.1*$size left -0.1*$size
