[ADD] comment icon

--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -15,6 +15,7 @@
 @import 'icons/skip.styl'
 @import 'icons/fastforward.styl'
 @import 'icons/check.styl'
+@import 'icons/comment.styl'
 
 .ico
   size: $size
