--- a/icons.css
+++ b/icons.css
@@ -498,6 +498,41 @@
   left: -0.5em;
   z-index: 1;
 }
+.ico_comment {
+  position: relative;
+}
+.ico_comment::before {
+  content: '';
+  display: block;
+  width: 4em;
+  height: 3em;
+  transform-origin: 0 0;
+  position: absolute;
+  top: 1em;
+  left: 0.5em;
+  z-index: 1;
+  background: #333;
+  border-radius: 65%;
+}
+.ico_comment {
+  position: relative;
+}
+.ico_comment::after {
+  content: '';
+  display: block;
+  height: ;
+  transform-origin: 0 0;
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  height: 0;
+  width: 0;
+  border-top: 0.5em solid transparent;
+  border-bottom: 0.5em solid transparent;
+  border-left: 1em solid #333;
+  transform: translateX(4em) translateY(3em) rotate(45deg);
+}
 .ico {
   width: 5em;
   height: 5em;
