--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -16,6 +16,7 @@
 @import 'icons/fastforward.styl'
 @import 'icons/check.styl'
 @import 'icons/comment.styl'
+@import 'icons/calendar.styl'
 
 .ico
   size: $size
