--- a/stylus/icons.styl
+++ b/stylus/icons.styl
@@ -17,6 +17,7 @@
 @import 'icons/check.styl'
 @import 'icons/comment.styl'
 @import 'icons/calendar.styl'
+@import 'icons/wifi.styl'
 
 .ico
   size: $size
